# sphinx-rust

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  build.yml  tests.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: analyze.rs  data_model.rs  lib.rs
crates/analyzer/src/analyze/: crate_.rs  enum_.rs  function.rs  module.rs  struct_.rs  type_.rs
crates/py_binding/: Cargo.toml
crates/py_binding/src/: data_model.rs  data_query.rs  lib.rs  objects.rs
docs/: api.rst  conf.py  design.rst  index.rst  needs.rst
docs/_static/: custom.css
docs/api/: .gitignore  index.rst
docs/api/crates/analyzer/: index.rst
docs/api/crates/analyzer/items/: analyze.rst  analyze::crate_.rst  analyze::crate_::AnalysisResult.rst  analyze::crate_::Crate.rst  analyze::enum_.rst  analyze::enum_::Enum.rst  analyze::enum_::Variant.rst  analyze::module.rst  analyze::module::Module.rst  analyze::struct_.rst  analyze::struct_::Field.rst  analyze::struct_::Struct.rst  analyze::type_.rst  analyze::type_::TypeSegment.rst
docs/api/crates/sphinx_rust/: index.rst
docs/api/crates/sphinx_rust/items/: AnalysisResult.rst  Crate.rst  Enum.rst  Field.rst  Module.rst  Struct.rst  TypeSegment.rst  Variant.rst
docs/integrations/: myst.md  needs.rst
python/sphinx_rust/: __init__.py  config.py  directives.py  domain.py  roles.py  sphinx_rust.pyi
python/sphinx_rust/cli/: __main__.py
python/sphinx_rust/directives/: _core.py  crate.py  enum.py  function.py  module.py  struct.py
tests/: test_sphinx_build.py
