[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Chris Sewell <chrisj_sewell@hotmail.com>"]
repository = "https://github.com/useblocks/sphinx-rust"
keywords = ["sphinx", "rust"]
categories = ["text-processing"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.82"
dunce = "1.0.4"
toml = "0.8.12"
insta = { version = "1.38.0", features = ["yaml"] }
pyo3 = "0.21.2"
quote = "1.0.36"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
syn = { version = "2.0.60", features = ["full", "extra-traits"] }
tempfile = "3.10.1"

[workspace.lints.clippy]
print_stdout = "warn"
print_stderr = "warn"
